:construction: Upload of the progress and :bug: scrollbar bug resolved

--- a/source/frontend/src/input.css
+++ b/source/frontend/src/input.css
@@ -8,12 +8,6 @@
 
 :root {
     min-height: 100vh;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
-
-:root::-webkit-scrollbar {
-    display: none;
 }
 
 .hiddenplus {
